@@ -158,7 +158,7 @@ def do_login():
                 raise MKUserError('_password', _('No password given.'))
 
             origtarget = html.var('_origtarget')
-            if not origtarget or origtarget.endswith("/logout.py"):
+            if not origtarget or "logout.py" in origtarget:
                 origtarget = defaults.url_prefix + 'check_mk/'
 
             users = load_htpasswd()
@@ -220,14 +220,14 @@ def normal_login_page(called_directly = True):
     html.header(_("Check_MK Multisite Login"), javascripts=[], stylesheets=["pages", "login"])
 
     origtarget = html.var('_origtarget', '')
-    if not origtarget and not html.req.myfile == 'login':
+    if not origtarget and not html.req.myfile in [ 'login', 'logout' ]:
         origtarget = html.makeuri([])
 
     # When e.g. the password of a user is changed and the first frame that recognizes the
     # non matching cookies is the sidebar it redirects the user to side.py while removing
     # the frameset. This is not good. Instead of this redirect the user to the index page.
     if html.req.myfile == 'side':
-        html.immediate_browser_redirect(0.1, 'index.py')
+        html.immediate_browser_redirect(0.1, 'login.py')
         return apache.OK
 
     # Never allow the login page to be opened in a frameset. Redirect top page to login page.
@@ -281,7 +281,7 @@ def page_logout():
     del_auth_cookie()
 
     if config.auth_type == 'cookie':
-        html.set_http_header('Location', defaults.url_prefix + 'check_mk/')
+        html.set_http_header('Location', defaults.url_prefix + 'check_mk/login.py')
         raise apache.SERVER_RETURN, apache.HTTP_MOVED_TEMPORARILY
     else:
         # Implement HTTP logout with cookie hack
